* Version 1.2.0
  - Feature ::

    - add: org-transclusion-after-add-hook

  - Fix ::

    - fix: org-transclusion-map now inherits org-mode-map (thanks to ag91 [1])
    - fix: reverting 252ec675; shouldn't remove the extra space at the end of
           transclusions from Org
    - fix: #115 allow adding #+name, etc. before #+transclude keyword
           (don't remove affiliated keywords when org-transclusoin-remove)

* Version 1.1.1

  - Fix ::

    - Fix rare but destructive issue where buffer text content could be deleted
      by removing a transclusion.  This could happen by killing a second Emacs
      instance (batch or online) or buffer, while the first Emacs keeps
      transclusions added

  - Other:

    - User Manual now refers to v1.1.x

* Version 1.1.0

  - Change ::

    - add:inhibit-read-only: fix:Org export errors with read-only
      With this, noweb expansion works now (limitation removed)

  - Fix ::

    - fix:#105 org-element--cache issue for Org v9.6
      Remove use of silent-modificaiton & inhibit-modification-hook
    - fix:add-all not to stop with error in one trasclusion
    - fix:Remove extra space/line added to Org elements transcluded

  - Other ::
    - README, Info doc user manual, online user manual
  
* Version 1.0.1

  - Add .elpaignore
  - Bump up version only to enable ELPA; no functional changes

* Version 1.0.0

  - Initial version available on ELPA (https://elpa.gnu.org/)

  - Feature ::

    - =:end= property and a search term to dynamically define a range of lines to transclude for text and
      source code block

  - Change ::

    - Now user option =org-transclusion-include-first-section='s default value
      is changed to =t=. This seems to be more intuitive for more users

  - Fix ::

    - =org-transclusion-before-kill= now checks if the buffer to be killed
      contains any transclusion AND it is visting a file before saving. This
      fixes some issues related to temp buffers, etc.    